@@ -67,11 +67,12 @@ class tx_solr_facet_SimpleFacetOptionsRenderer implements tx_solr_FacetOptionsRe
 	protected $query;
 
 	/**
-	 * Query Link Builder
+	 * Link target page id.
 	 *
-	 * @var tx_solr_query_LinkBuilder
+	 * @var	integer
 	 */
-	protected $queryLinkBuilder;
+	protected $linkTargetPageId = 0;
+
 
 	/**
 	 * Constructor
@@ -85,25 +86,21 @@ class tx_solr_facet_SimpleFacetOptionsRenderer implements tx_solr_FacetOptionsRe
 		$this->facetName          = $facetName;
 		$this->facetOptions       = $facetOptions;
 
+		$this->template           = clone $template;
+		$this->query              = $query;
+
 		$solrConfiguration        = tx_solr_Util::getSolrConfiguration();
 		$this->facetConfiguration = $solrConfiguration['search.']['faceting.']['facets.'][$facetName . '.'];
-
-		$this->query = $query;
-
-		$this->queryLinkBuilder = t3lib_div::makeInstance('tx_solr_query_LinkBuilder', $query);
-
-
-		$this->template = clone $template;
 	}
 
 	/**
 	 * Sets the link target page Id for links generated by the query linking
 	 * methods.
 	 *
-	 * @param	integer	$pageId The link target page Id.
+	 * @param	integer	$linkTargetPageId The link target page Id.
 	 */
-	public function setLinkTargetPageId($pageId) {
-		$this->queryLinkBuilder->setLinkTargetPageId(intval($pageId));
+	public function setLinkTargetPageId($linkTargetPageId) {
+		$this->linkTargetPageId = intval($linkTargetPageId);
 	}
 
 	/**
@@ -139,7 +136,8 @@ class tx_solr_facet_SimpleFacetOptionsRenderer implements tx_solr_FacetOptionsRe
 				$this->query,
 				$this->facetName,
 				$facetOption
-			);
+			); /* @var $facetLinkBuilder tx_solr_facet_LinkBuilder */
+			$facetLinkBuilder->setLinkTargetPageId($this->linkTargetPageId);
 
 			$optionText    = $facetOption->render();
 			$optionLink    = $facetLinkBuilder->getAddFacetOptionLink($optionText);
